[gd_scene load_steps=10 format=3]

[ext_resource type="SpriteFrames" uid="uid://c3bahe6lnnse8" path="res://src/games/harvey/player/harvey_spriteframes.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://cadjlq5gl6srf" path="res://src/games/harvey/player/PlayerItem.tscn" id="2"]
[ext_resource type="PackedScene" path="res://src/games/harvey/player/Machine.tscn" id="3"]
[ext_resource type="FontFile" path="res://addons/core/resources/fonts/debug-info-text.tres" id="4_b5bxh"]
[ext_resource type="Script" path="res://src/games/harvey/player/HarveyPlayer.gd" id="5"]
[ext_resource type="PackedScene" path="res://addons/core/actions/ActionDetector.tscn" id="6_1tlex"]
[ext_resource type="SpriteFrames" uid="uid://y6eqsli8lr2t" path="res://src/dino/weapons/arrow.tres" id="10"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(15, 26)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(384, 256)

[node name="HarveyPlayer" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -13)
shape = SubResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(2, 2)
sprite_frames = ExtResource("1")
animation = &"run"
frame = 3

[node name="Machine" parent="." instance=ExtResource("3")]

[node name="StateLabel" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -57.0
offset_right = 20.0
offset_bottom = -41.0
bbcode_enabled = true
text = "state"
scroll_active = false

[node name="ActionLabel" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -42.0
offset_right = 32.0
offset_bottom = -26.0
theme_override_fonts/normal_font = ExtResource("4_b5bxh")
bbcode_enabled = true
scroll_active = false

[node name="Item" parent="." instance=ExtResource("2")]

[node name="ActionArrow" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = ExtResource("10")

[node name="ActionDetector" parent="." instance=ExtResource("6_1tlex")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionDetector"]
visible = false
shape = SubResource("3")
